Open Close Principle example completed with Specification and Filter